<resources>
    <string name="app_name">Mi Deporte repaso</string>
    <string name="labelTipo">Tipo :</string>
    <string name="labelDeporte">Deporte :</string>
    <string name="rbIndividual">Individual</string>
    <string name="rbEnPareja">En pareja</string>
    <string name="rbGrupal">Grupal</string>

    <string-array name="depIndividual">
        <item>Salto de altura</item>
        <item>Atletismo</item>
        <item>Gimnasia</item>
    </string-array>

    <string-array name="depPareja">
        <item>Pádel</item>
        <item>Tenis</item>
        <item>Squash</item>
    </string-array>

    <string-array name="depGrupal">
        <item>Fútbol</item>
        <item>Rugby</item>
        <item>Balonmano</item>
    </string-array>
</resources>