<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelTipo" />

        <RadioGroup
            android:id="@+id/rgTipos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp">

            <RadioButton
                android:id="@+id/rbIndividual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbIndividual" />

            <RadioButton
                android:id="@+id/rbEnPareja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbEnPareja" />

            <RadioButton
                android:id="@+id/rbGrupal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbGrupal" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelDeporte" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textColor="@color/colorLabelResultado"
        android:textSize="34sp" />
</LinearLayout>